--- a/Intro.Rmd
+++ b/Intro.Rmd
@@ -17,10 +17,69 @@ library(patchwork)
 library(here)
 
 # Load the PBMC dataset
-pbmc.data <- Read10X(data.dir = ("C:/Users/Chels/Documents/github/SeuratIntro/pbmc3k_filtered_gene_bc_matrices.tar.gz"))
-
+pbmc.data <- Read10X(here(data.dir = "data/filtered_gene_bc_matrices/hg19/"))
 # Initialize the Seurat object with the raw (non-normalized data).
 pbmc <- CreateSeuratObject(counts = pbmc.data, project = "pbmc3k", min.cells = 3, min.features = 200)
 pbmc
+```
+```{r Seurat object}
+# GithubWiki exploration
+
+# nrow and ncol provide the number of features and cells in the active assay, respectively
+# dim provides both nrow and ncol at the same time
+nrow(pbmc)
+ncol(pbmc)
+dim(x = pbmc)
+
+# In addtion to rownames and colnames, one can use dimnames
+# which provides a two-length list with both rownames and colnames
+head(x = rownames(x = pbmc))
+
+
+head(x = colnames(x = pbmc))
+
+# A vector of names of associated objects can be had with the names function
+# These can be passed to the double [[ extract operator to pull them from the Seurat object
+
+names(x = pbmc)
+
+pbmc[['RNA']]
+
+# Cell-level meta data is stored as a data frame
+# Standard data frame functions work on the meta data data frame
+colnames(x = pbmc[[]])
+```
+```{r Qc}
+# The [[ operator can add columns to object metadata. This is a great place to stash QC stats
+pbmc[["percent.mt"]] <- PercentageFeatureSet(pbmc, pattern = "^MT-")
+
+#visualizing all raw data values
+VlnPlot(pbmc, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
+
+plot1 <- FeatureScatter(pbmc, feature1 = "nCount_RNA", feature2 = "percent.mt")
+plot2 <- FeatureScatter(pbmc, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")
+plot1 + plot2
+
+# removing cells of low quality, empty droplets/ doublets/ increased mitochondrial contamination 
+pbmc <- subset(pbmc, subset = nFeature_RNA > 200 & nFeature_RNA < 2500 & percent.mt < 5)
+```
+```{r normalizing}
+#normalizing data
+pbmc <- NormalizeData(pbmc, normalization.method = "LogNormalize", scale.factor = 10000)
+
+pbmc <- NormalizeData(pbmc)
+```
+```{r variable features}
+#identifying variable features
+pbmc <- FindVariableFeatures(pbmc, selection.method = "vst", nfeatures = 2000)
+
+# Identify the 10 most highly variable genes
+top10 <- head(VariableFeatures(pbmc), 10)
+top10
+
+# plot variable features with and without labels
+plot1 <- VariableFeaturePlot(pbmc)
+plot2 <- LabelPoints(plot = plot1, points = top10, repel = TRUE)
+plot1 + plot2
 
 ```
